force-app/main/default/objects/sm_Store_Order_Item__c/fields/sm_Cost__c.field-meta.xml
<CustomField>
    <fullName>sm_Cost__c</fullName>
    <label>Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>