force-app/main/default/objects/sm_Store_Order_Item__c/fields/sm_Extended_Price__c.field-meta.xml
<CustomField>
    <fullName>sm_Extended_Price__c</fullName>
    <formula>sm_Price__c *  sm_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extended Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>