force-app/main/default/objects/sm_Store_Order_Item__c/fields/sm_Inventory_Item__c.field-meta.xml
<CustomField>
    <fullName>sm_Inventory_Item__c</fullName>
    <label>Inventory Item</label>
    <referenceTo>sm_Inventory_Item__c</referenceTo>
    <relationshipLabel>Store Order Items</relationshipLabel>
    <relationshipName>Store_Order_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>