force-app/main/default/objects/sm_Store_Order_Item__c/listViews/Order_Item_Summary.listView-meta.xml
<ListView>
    <fullName>Order_Item_Summary</fullName>
    <columns>sm_Inventory_Item__c</columns>
    <columns>sm_Quantity__c</columns>
    <columns>sm_Price__c</columns>
    <columns>sm_Cost__c</columns>
    <columns>sm_Extend__c</columns>
    <filterScope>Everything</filterScope>
    <label>Order Item Summary</label>
</ListView>